{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 26,
  "lineage": "d9eb5b41-7d03-2f32-5dcc-e77f6883038b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "diet_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:internet-gateway/igw-0a80423a44fd71e14",
            "id": "igw-0a80423a44fd71e14",
            "owner_id": "695466865332",
            "tags": {
              "Name": "diet-igw"
            },
            "tags_all": {
              "Name": "diet-igw"
            },
            "vpc_id": "vpc-08e01cffa2f14dd51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "diet_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:route-table/rtb-0e59492ee2ce45521",
            "id": "rtb-0e59492ee2ce45521",
            "owner_id": "695466865332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a80423a44fd71e14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "diet-public-rt"
            },
            "tags_all": {
              "Name": "diet-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e01cffa2f14dd51"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.diet_igw",
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeca63dfd47aaf06",
            "route_table_id": "rtb-0e59492ee2ce45521",
            "subnet_id": "subnet-0b078c36ecb6d6be8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.diet_igw",
            "aws_route_table.diet_public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1116c9b84ed2f84",
            "route_table_id": "rtb-0e59492ee2ce45521",
            "subnet_id": "subnet-0f261a6337c14c8e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.diet_igw",
            "aws_route_table.diet_public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:security-group/sg-0d28ca1a7e59df2fc",
            "description": "Allow HTTP/HTTPS access to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d28ca1a7e59df2fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "695466865332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e01cffa2f14dd51"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:subnet/subnet-0b078c36ecb6d6be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b078c36ecb6d6be8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695466865332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "diet-public-subnet-1"
            },
            "tags_all": {
              "Name": "diet-public-subnet-1"
            },
            "vpc_id": "vpc-08e01cffa2f14dd51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:subnet/subnet-0f261a6337c14c8e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f261a6337c14c8e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695466865332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "diet-public-subnet-2"
            },
            "tags_all": {
              "Name": "diet-public-subnet-2"
            },
            "vpc_id": "vpc-08e01cffa2f14dd51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.diet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "diet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:695466865332:vpc/vpc-08e01cffa2f14dd51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdc53e98f8f4eb7c",
            "default_route_table_id": "rtb-0e3a167e48ff06345",
            "default_security_group_id": "sg-0a708c891c70a23f5",
            "dhcp_options_id": "dopt-062a03041ade33485",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e01cffa2f14dd51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3a167e48ff06345",
            "owner_id": "695466865332",
            "tags": {
              "Name": "diet-vpc"
            },
            "tags_all": {
              "Name": "diet-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}